Вроде все готово) ---------------------------- + Устранить краши